--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ django-bootstrap4==2.3.1
 django-decouple==2.1
 django-heroku==0.3.1
 django-registration==3.1.1
+django-tinymce==3.1.0
 gunicorn==20.0.4
 Pillow==8.0.1
 psycopg2==2.8.6
+python-decouple==3.3
 python-http-client==3.3.1
 pytz==2020.4
 six==1.15.0
