--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
 Django==3.1.3
 django-bootstrap4==2.3.1
+django-crispy-forms==1.10.0
 django-decouple==2.1
 django-heroku==0.3.1
 django-registration==3.1.1
